# loop-fusion

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.circleci/: config.yml
benchmarks/: CMakeLists.txt  benchmark_loop_fusion.cpp  benchmark_loop_union.cpp
cmake/: MiscFunctions.cmake  README.md  coverage.cmake
docs/: Benchmarks.md  CMakeLists.txt  CodeConventions.md  CodeQualityTools.md  DesignDecisions.md  Doxygen.md  MergingLoops.md  README.md  Terminology.md  Usage.md
examples/: README.md
examples/compiletime_basic/: CMakeLists.txt  loops.cpp
examples/runtime_basic/: CMakeLists.txt  loops.cpp
examples/simple_merge/: CMakeLists.txt  loops.cpp
include/loop_fusion/compiletime/: basic_looper.hpp  basic_looper_merge.hpp  loop_fusion.hpp
include/loop_fusion/runtime/: looper.hpp  looper_union.hpp
tests/: CMakeLists.txt  test.cpp  test_helpers.cpp  test_helpers.hpp  test_loop_fusion_compiletime.cpp  test_loop_fusion_runtime.cpp  test_loop_fusion_simple.cpp
tools/: README.md  build_examples.sh  build_run_clang_tidy.sh  build_single_file_header.sh  run_clang_format.sh  run_cppcheck.sh
tools/docker/: Dockerfile  README.md  c++.local.properties  install_ce_libraries.sh  install_compiler_explorer.sh  install_loop_fusion.sh  start_ce.sh
